# libhitaki

./: README.rst  meson.build  meson_options.txt
.github/workflows/: build.yml
doc/: hitaki.toml.in  meson.build  overview.md  urlmap.js
src/: alsa_firewire.c  alsa_firewire.h  alsa_firewire_private.c  alsa_firewire_private.h  efw_protocol.c  efw_protocol.h  efw_protocol_private.h  hitaki.h  hitaki.map  hitaki_enum_types.h  hitaki_sigs_marshal.list  meson.build  motu_command_dsp.c  motu_command_dsp.h  motu_register_dsp.c  motu_register_dsp.h  quadlet_notification.c  quadlet_notification.h  snd_dice.c  snd_dice.h  snd_digi00x.c  snd_digi00x.h  snd_efw.c  snd_efw.h  snd_fireface.c  snd_fireface.h  snd_motu.c  snd_motu.h  snd_motu_register_dsp_parameter.c  snd_motu_register_dsp_parameter.h  snd_tascam.c  snd_tascam.h  snd_unit.c  snd_unit.h  tascam_protocol.c  tascam_protocol.h  timestamped_quadlet_notification.c  timestamped_quadlet_notification.h
tests/: alsa-firewire  efw-protocol  helper.py  hitaki-enum  hitaki-functions  meson.build  motu-command-dsp  motu-register-dsp  quadlet-notification  snd-dice  snd-digi00x  snd-efw  snd-fireface  snd-motu  snd-motu-register-dsp-parameter  snd-tascam  snd-unit  tascam-protocol  timestamped-quadlet-notification
